--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -4,44 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2B4178">
+    android:background="@color/bg">
 
     <TextView
         android:id="@+id/avrspeed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="100dp"
         android:fontFamily="serif-monospace"
-        android:text=" 0"
-        android:textColor="#FFEB3B"
+        android:textAlignment="center"
+        android:text="0"
+        android:textColor="@color/text"
         android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/distanceDesc" />
+        app:layout_constraintTop_toBottomOf="@+id/AvarageSpeedDesc" />
 
     <TextView
         android:id="@+id/AvarageSpeedDesc"
-        android:layout_width="264dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="180dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="50dp"
         android:fontFamily="serif-monospace"
-        android:text="AvrSpeed: "
-        android:textColor="#FFEB3B"
+        android:textAlignment="center"
+        android:text="AVG SPEED"
+        android:textColor="@color/text"
         android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/distance" />
+        app:layout_constraintTop_toBottomOf="@+id/distanceDesc" />
 
     <TextView
         android:id="@+id/speedDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="50dp"
         android:fontFamily="serif-monospace"
-        android:text="Distance: "
-        android:textColor="#FFEB3B"
+        android:textAlignment="center"
+        android:text="DISTANCE"
+        android:textColor="@color/text"
         android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,51 +60,78 @@
         android:id="@+id/speed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="100dp"
         android:fontFamily="serif-monospace"
-        android:text=" 0"
-        android:textColor="#FFEB3B"
+        android:textAlignment="center"
+        android:text="0"
+        android:textColor="@color/text"
         android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/distanceDesc" />
 
     <TextView
         android:id="@+id/distanceDesc"
-        android:layout_width="264dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="50dp"
         android:fontFamily="serif-monospace"
-        android:text="Speed: "
-        android:textColor="#FFEB3B"
+        android:textAlignment="center"
+        android:text="SPEED"
+        android:textColor="@color/text"
         android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/distance" />
+        app:layout_constraintTop_toBottomOf="@+id/speedDesc" />
 
     <TextView
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="100dp"
         android:fontFamily="serif-monospace"
-        android:text=" 0"
-        android:textColor="#FFEB3B"
+        android:textAlignment="center"
+        android:text="0"
+        android:textColor="@color/text"
         android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/speedDesc" />
+
+    <!-- <Button
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/buttonMain"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.742" /> -->
 
     <Button
         android:id="@+id/logoutBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="@color/button"
         android:onClick="stop"
         android:text="STOP"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/distanceDesc" />
+        app:layout_constraintTop_toBottomOf="@+id/avrspeed"
+        app:layout_constraintVertical_bias="0.863" />
 
     " />
 
