--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg"
+    android:background="?attr/background"
     tools:context=".Login">
 
     <ImageView
@@ -42,6 +42,7 @@
         android:layout_marginStart="42dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="42dp"
+        style="@style/MyEditText"
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
@@ -56,6 +57,7 @@
         android:layout_marginStart="42dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="42dp"
+        style="@style/MyEditText"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -68,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:backgroundTint="@color/button"
+        style="@style/MyButton"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Create Account"
-        android:textColor="@color/underText"
+        style="@style/MyUnderText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />
