--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,32 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="background">@color/bgNight</item>
+    </style>
+
+    <style name="MyButtonMain" parent="Widget.AppCompat.Button">
+        <item name="backgroundTint">@color/buttonMainNight</item>
+        <item name="android:textColor">@color/textNight</item>
+    </style>
+
+    <style name="MyButton" parent="Widget.AppCompat.Button">
+        <item name="backgroundTint">@color/buttonNight</item>
+        <item name="android:textColor">@color/textNight</item>
+    </style>
+
+    <style name="MyUnderText" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/underTextNight</item>
+    </style>
+
+    <style name="MyEditText" parent="Widget.AppCompat.TextView">
+        <item name="android:backgroundTint">@color/editTextNight</item>
+    </style>
+
+    <style name="MySlider" parent="Widget.AppCompat.CompoundButton.Switch">
+        <item name="colorControlActivated">@color/buttonMainNight</item>
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/colorSwitchThumbNormal</item>
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">@color/colorSwitchForeground</item>
     </style>
 </resources>
