--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,7 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="25dp"
         style="@style/MyButtonMain"
-        android:text="Options"
+        android:text="Rewards"
         app:layout_constraintBottom_toTopOf="@+id/mapBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
