--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,10 @@
         android:theme="@style/MySlider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoutBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/logoutBtn"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -36,27 +38,23 @@
         android:id="@+id/imageViewModeIcon"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="650dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="10dp"
         android:contentDescription="@string/logo"
         android:src="@drawable/sun"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/switchMaterial"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/mapBtn" />
 
     <ImageView
         android:id="@+id/imageViewModeIcon2"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="650dp"
-        android:layout_marginEnd="155dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="80dp"
         android:contentDescription="@string/logo"
         android:src="@drawable/moonno"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/switchMaterial"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/mapBtn" />
 
     <TextView
         android:id="@+id/Name"
@@ -79,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="604dp"
+        android:layout_marginTop="560dp"
         android:layout_marginEnd="100dp"
         style="@style/MyButton"
         android:onClick="logout"
@@ -122,7 +120,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         style="@style/MyButtonMain"
         android:onClick="Map"
         android:text="Map"
